# paper-hermes

./: AGENTS.md  README.md  pyproject.toml  subscriptions.json
.github/workflows/: ci.yml
docs/: architecture.html  phase2-mcp-design.html  phase3-delivery-design.html  phase4-final-design.html
src/paper_hermes/: arxiv_scraper.py  models.py  server.py  subscriptions.py  summarizer.py
tests/: test_arxiv.py
